--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -35,17 +35,14 @@ jobs:
       id: bump_version
       run: |
         # Extract version from .csproj file
-        VERSION_PREFIX=$(grep -oP '(?<=<VersionPrefix>).*?(?=</VersionPrefix>)' ./src/Teams.ThirdPartyAppApi.csproj)
-        VERSION_SUFFIX=$(grep -oP '(?<=<VersionSuffix>).*?(?=</VersionSuffix>)' ./src/Teams.ThirdPartyAppApi.csproj)
-        VERSION="$VERSION_PREFIX.$VERSION_SUFFIX"
+        VERSION=$(grep -oP '(?<=<Version>).*?(?=</Version>)' ./path/to/YourProject.csproj)
 
         # Bump version
         NEW_VERSION=$(echo "$VERSION" | awk -F. '{$NF = $NF + 1;} 1' | sed 's/ /./g')
         echo "Bumping version from $VERSION to $NEW_VERSION"
 
         # Update version in .csproj file
-        sed -i "s/<VersionPrefix>$VERSION_PREFIX<\/VersionPrefix>/<VersionPrefix>${NEW_VERSION%.*}<\/VersionPrefix>/g" ./src/Teams.ThirdPartyAppApi.csproj
-        sed -i "s/<VersionSuffix>$VERSION_SUFFIX<\/VersionSuffix>/<VersionSuffix>${NEW_VERSION##*.}<\/VersionSuffix>/g" ./src/Teams.ThirdPartyAppApi.csproj
+        sed -i "s/<Version>$VERSION<\/Version>/<Version>$NEW_VERSION<\/Version>/g" ./path/to/YourProject.csproj
 
         # Set output
         echo "::set-output name=NEW_VERSION::$NEW_VERSION"
