--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -35,14 +35,14 @@ jobs:
       id: bump_version
       run: |
         # Extract version from .csproj file
-        VERSION=$(grep -oP '(?<=<Version>).*?(?=</Version>)' ./path/to/YourProject.csproj)
+        VERSION=$(grep -oP '(?<=<Version>).*?(?=</Version>)' ./src/Teams.ThirdPartyAppApi.csproj)
 
         # Bump version
         NEW_VERSION=$(echo "$VERSION" | awk -F. '{$NF = $NF + 1;} 1' | sed 's/ /./g')
         echo "Bumping version from $VERSION to $NEW_VERSION"
 
         # Update version in .csproj file
-        sed -i "s/<Version>$VERSION<\/Version>/<Version>$NEW_VERSION<\/Version>/g" ./path/to/YourProject.csproj
+        sed -i "s/<Version>$VERSION<\/Version>/<Version>$NEW_VERSION<\/Version>/g" ./src/Teams.ThirdPartyAppApi.csproj
 
         # Set output
         echo "::set-output name=NEW_VERSION::$NEW_VERSION"
