--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -42,7 +42,9 @@ jobs:
         echo "Bumping version from $VERSION to $NEW_VERSION"
 
         # Update version in .csproj file
-        sed -i "s/<Version>$VERSION<\/Version>/<Version>$NEW_VERSION<\/Version>/g" ./src/Teams.ThirdPartyAppApi.csproj
+        sed -i "s#<Version>$VERSION</Version>#<Version>$NEW_VERSION</Version>#g" ./src/Teams.ThirdPartyAppApi.csproj
+
+
 
         # Set output
         echo "::set-output name=NEW_VERSION::$NEW_VERSION"
