--- a/src/Teams.ThirdPartyAppApi.csproj
+++ b/src/Teams.ThirdPartyAppApi.csproj
@@ -12,7 +12,7 @@
     <RepositoryUrl>https://github.com/ferenyl/Teams.ThirdPartyAppApi.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageTags>Microsoft Teams; API</PackageTags>
-    <PackageReleaseNotes>improved resilience &amp; error handling</PackageReleaseNotes>
+    <PackageReleaseNotes>https://github.com/ferenyl/Teams.ThirdPartyAppApi/releases/tag/v$(Version)</PackageReleaseNotes>
     <PackageId>$(AssemblyName)</PackageId>
     <Description>API Client for the client side Teams API</Description>
     <PackageProjectUrl>https://github.com/ferenyl/Teams.ThirdPartyAppApi</PackageProjectUrl>
