--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
@@ -39,14 +39,14 @@ jobs:
 
         # Bump version
         NEW_VERSION=$(echo "$VERSION" | awk -F. '{$NF = $NF + 1;} 1' | sed 's/ /./g')
-        echo "Bumping version from $VERSION"
+        echo "Bumping version from $VERSION to $NEW_VERSION"
 
         # Update version in .csproj file
 
         sed -i "s/<AssemblyVersion>$VERSION<\/AssemblyVersion>/<AssemblyVersion>$NEW_VERSION<\/AssemblyVersion>/g" ./src/Teams.ThirdPartyAppApi.csproj
 
         # Set output
-        echo "::set-output name=NEW_VERSION::$NEW_VERSION"
+        echo "NEW_VERSION=$NEW_VERSION" >> $GITHUB_OUTPUT
       if: github.ref == 'refs/heads/main'
 
     - name: Commit and push
@@ -69,7 +69,7 @@ jobs:
 
     - name: Get NuGet package name
       id: pkg
-      run: echo "::set-output name=package::$(basename $(find ./artifacts -name "*.nupkg"))"
+      run: echo "PACKAGENAME=$(basename $(find ./artifacts -name "*.nupkg"))" >> $GITHUB_OUTPUT"
       if: github.ref == 'refs/heads/main'
 
     - name: Generate release notes
@@ -79,7 +79,7 @@ jobs:
         RELEASE_NOTES="$(git log $(git describe --tags --abbrev=0)..HEAD --pretty=format:"- %s")"
         
         # Set output
-        echo "::set-output name=notes::$RELEASE_NOTES"
+        echo  "NOTES=$RELEASE_NOTES" >> $GITHUB_OUTPUT"
       if: github.ref == 'refs/heads/main'
 
     - name: Create GitHub Release
@@ -94,3 +94,13 @@ jobs:
         draft: false
         prerelease: false
       if: github.ref == 'refs/heads/main'
+
+    - name: create release
+      uses: ncipollo/release-action@v1
+      with:
+        artifacts: "./artifacts/*.nupkg, ./artifacts/*.snupkg"
+        body:  ${{ steps.release_notes.outputs.NOTES }}
+        token: ${{ secrets.GITHUB_TOKEN }}
+        prerelease: false
+        draft: false
+        name: Release v${{ steps.bump_version.outputs.NEW_VERSION }}
