--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -69,7 +69,7 @@ jobs:
 
     - name: Get NuGet package name
       id: pkg
-      run: echo "PACKAGENAME=$(basename $(find ./artifacts -name "*.nupkg"))" >> $GITHUB_OUTPUT"
+      run: echo "PACKAGENAME=$(basename $(find ./artifacts -name '*.nupkg')) >> $GITHUB_OUTPUT"
       if: github.ref == 'refs/heads/main'
 
     - name: Generate release notes
@@ -82,19 +82,6 @@ jobs:
         echo  "NOTES=$RELEASE_NOTES" >> $GITHUB_OUTPUT"
       if: github.ref == 'refs/heads/main'
 
-    - name: Create GitHub Release
-      id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
-      with:
-        tag_name: v${{ steps.bump_version.outputs.NEW_VERSION }}
-        release_name: Release v${{ steps.bump_version.outputs.NEW_VERSION }}
-        body: ${{ steps.release_notes.outputs.notes }}
-        draft: false
-        prerelease: false
-      if: github.ref == 'refs/heads/main'
-
     - name: create release
       uses: ncipollo/release-action@v1
       with:
@@ -104,3 +91,4 @@ jobs:
         prerelease: false
         draft: false
         name: Release v${{ steps.bump_version.outputs.NEW_VERSION }}
+      if: github.ref == 'refs/heads/main'
