--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,7 +18,7 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Setup .NET
-      uses: actions/setup-dotnet@v3
+      uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 8.0.x
 
@@ -88,6 +88,7 @@ jobs:
         artifacts: "./artifacts/*.nupkg, ./artifacts/*.snupkg"
         body:  ${{ steps.release_notes.outputs.NOTES }}
         token: ${{ secrets.GITHUB_TOKEN }}
+        tag: v${{ steps.bump_version.outputs.NEW_VERSION }}
         prerelease: false
         draft: false
         name: Release v${{ steps.bump_version.outputs.NEW_VERSION }}
