--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -19,10 +19,6 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: Get version
-      id: get_version
-      run: echo "NEW_VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
-
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
@@ -37,8 +33,14 @@ jobs:
     - name: Test
       run: dotnet test --no-build --verbosity normal
 
+    - name: Get version
+      id: get_version
+      run: echo "NEW_VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
+
     - name: Set version to tag
       id: bump_version
+      env:
+        NEW_VERSION: ${{ steps.get_version.outputs.NEW_VERSION }}
       run: |
         sed -i "s/<AssemblyVersion>.*<\/AssemblyVersion>/<AssemblyVersion>$NEW_VERSION<\/AssemblyVersion>/g" ./src/Teams.ThirdPartyAppApi.csproj
       if: startsWith(github.ref, 'refs/tags/v')
@@ -69,13 +71,13 @@ jobs:
         artifacts: "./artifacts/*.nupkg, ./artifacts/*.snupkg"
         body:  ${{ steps.release_notes.outputs.NOTES }}
         token: ${{ secrets.GITHUB_TOKEN }}
-        tag: v${{ steps.bump_version.outputs.NEW_VERSION }}
+        tag: v${{ steps.get_version.outputs.NEW_VERSION }}
         prerelease: false
         draft: false
-        name: Release v${{ steps.bump_version.outputs.NEW_VERSION }}
+        name: Release v${{ steps.get_version.outputs.NEW_VERSION }}
         generateReleaseNotes: true
       if: startsWith(github.ref, 'refs/tags/v')
 
-    - name: Push
-      run: dotnet nuget push "./artifacts/*.nupkg" --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
-      if: startsWith(github.ref, 'refs/tags/v')
+    # - name: Push
+    #   run: dotnet nuget push "./artifacts/*.nupkg" --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
+    #   if: startsWith(github.ref, 'refs/tags/v')
