--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -78,6 +78,6 @@ jobs:
         generateReleaseNotes: true
       if: startsWith(github.ref, 'refs/tags/v')
 
-    # - name: Push
-    #   run: dotnet nuget push "./artifacts/*.nupkg" --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
-    #   if: startsWith(github.ref, 'refs/tags/v')
+    - name: Push
+      run: dotnet nuget push "./artifacts/*.nupkg" --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
+      if: startsWith(github.ref, 'refs/tags/v')
