--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -5,11 +5,11 @@ name: .NET Core CI
 
 on:
   push:
-    branches: [main]
+    branches: ["*"]
     tags:
       - "v*"
   pull_request:
-    branches: [main]
+    branches: ["main"]
 
 jobs:
   build:
@@ -32,36 +32,50 @@ jobs:
       - name: Test
         run: dotnet test --no-build --verbosity normal
 
+      - name: Detect branch and set prerelease variables
+        id: branch_check
+        run: |
+          BRANCH_NAME="${GITHUB_REF#refs/heads/}"
+          IS_PRERELEASE="false"
+          if [[ "$BRANCH_NAME" != "main" && "$GITHUB_REF" != refs/tags/v* ]]; then
+            IS_PRERELEASE="true"
+          fi
+          echo "IS_PRERELEASE=$IS_PRERELEASE" >> $GITHUB_OUTPUT
+          echo "BRANCH_NAME=$BRANCH_NAME" >> $GITHUB_OUTPUT
+
       - name: Get version
         id: get_version
-        run: echo "NEW_VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
+        run: |
+          if [[ "${{ steps.branch_check.outputs.IS_PRERELEASE }}" == "true" ]]; then
+            VERSION="0.8.19-${{ steps.branch_check.outputs.BRANCH_NAME }}-${GITHUB_SHA:0:7}"
+          else
+            VERSION="${GITHUB_REF#refs/tags/v}"
+          fi
+          echo "NEW_VERSION=$VERSION" >> $GITHUB_OUTPUT
 
-      - name: Set version to tag
+      - name: Set version to tag or prerelease
         id: bump_version
         env:
           NEW_VERSION: ${{ steps.get_version.outputs.NEW_VERSION }}
         run: |
           sed -i "s/<AssemblyVersion>.*<\/AssemblyVersion>/<AssemblyVersion>$NEW_VERSION<\/AssemblyVersion>/g" ./src/Teams.ThirdPartyAppApi.csproj
-        if: startsWith(github.ref, 'refs/tags/v')
+        if: always()
 
       - name: Pack
         run: dotnet pack ./src/Teams.ThirdPartyAppApi.csproj  --configuration Release --output ./artifacts
-        if: startsWith(github.ref, 'refs/tags/v')
+        if: always()
 
       - name: Get NuGet package name
         id: pkg
-        run: echo "PACKAGENAME=$(basename $(find ./artifacts -name '*.nupkg')) >> $GITHUB_OUTPUT"
-        if: startsWith(github.ref, 'refs/tags/v')
+        run: echo "PACKAGENAME=$(basename $(find ./artifacts -name '*.nupkg'))" >> $GITHUB_OUTPUT
+        if: always()
 
       - name: Generate release notes
         id: release_notes
         run: |
-          # Get commit messages since last tag
           RELEASE_NOTES="$(git log $(git describe --tags --abbrev=0)..HEAD --pretty=format:"- %s")"
-
-          # Set output
-          echo  "NOTES=$RELEASE_NOTES >> $GITHUB_OUTPUT"
-        if: startsWith(github.ref, 'refs/tags/v')
+          echo  "NOTES=$RELEASE_NOTES" >> $GITHUB_OUTPUT
+        if: always()
 
       - name: create release
         uses: ncipollo/release-action@v1.13.0
@@ -70,12 +84,12 @@ jobs:
           body: ${{ steps.release_notes.outputs.NOTES }}
           token: ${{ secrets.GITHUB_TOKEN }}
           tag: v${{ steps.get_version.outputs.NEW_VERSION }}
-          prerelease: false
+          prerelease: ${{ steps.branch_check.outputs.IS_PRERELEASE }}
           draft: false
           name: Release v${{ steps.get_version.outputs.NEW_VERSION }}
           generateReleaseNotes: true
-        if: startsWith(github.ref, 'refs/tags/v')
+        if: always()
 
       - name: Push
         run: dotnet nuget push "./artifacts/*.nupkg" --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
-        if: startsWith(github.ref, 'refs/tags/v')
+        if: always()
