Add comprehensive performance and memory benchmarks
Benchmark Infrastructure:
- Created dedicated Teams.ThirdPartyAppApi.Benchmarks project
- Integrated BenchmarkDotNet 0.15.6 for professional performance analysis
- Added InternalsVisibleTo for benchmark access to internal types
- Configured MemoryDiagnoser and ThreadingDiagnoser for all benchmarks
- Added project to solution for easy access

WebSocket Message Benchmarks:
- UTF8 encoding performance at 4 message sizes (12B to 5KB)
- UTF8 decoding performance for medium and large messages
- Realistic Teams API message generation for testing
- Measures memory allocations during encoding/decoding
- Critical: Runs on every Teams command and state update

State Management Benchmarks:
- MeetingStateSnapshot creation performance (default and with values)
- With() method performance (single and multiple property updates)
- Equals() comparison performance (equal and different states)
- GetHashCode() performance for change detection
- BehaviorSubject emission and read performance
- Critical: Every state change during meetings triggers these operations

Buffer Pool Benchmarks:
- ArrayPool vs new array allocation comparison
- Three buffer sizes: Small (256B), Medium (4KB), Large (64KB)
- Multiple allocation scenarios (100 iterations)
- Baseline comparison showing optimization benefits
- Critical: Reduces GC pressure from continuous WebSocket communication

JSON Serialization Benchmarks:
- ClientMessage serialization performance
- ServerMessage deserialization (simple and complex)
- Round-trip serialization/deserialization
- Realistic Teams API message structures
- Critical: Every API call requires JSON processing

Observable/Reactive Benchmarks:
- BehaviorSubject subscription overhead
- OnNext performance with single and multiple subscribers
- DistinctUntilChanged filtering (same vs different values)
- Select + DistinctUntilChanged pipeline performance
- Where + Select pipeline performance
- Critical: All state properties use t

--- a/src/Teams.ThirdPartyAppApi.csproj
+++ b/src/Teams.ThirdPartyAppApi.csproj
@@ -39,6 +39,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <InternalsVisibleTo Include="Teams.ThirdPartyAppApi.Tests" />
+    <InternalsVisibleTo Include="Teams.ThirdPartyAppApi.Benchmarks" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.0" />
     <PackageReference Include="System.Reactive" Version="6.1.0" />
     <PackageReference Include="Macross.Json.Extensions" Version="3.0.0" />
