feat: optimize code and memory (#33)
* Optimize memory management and add comprehensive test coverage

Performance & Memory Optimizations:
- Fixed memory leaks in WebSocketHandler by properly disposing CancellationTokenSource instances
- Implemented ArrayPool<byte> for buffer reuse in Send/ReceiveAsync methods
- Added proper disposal of linked CancellationTokenSource objects
- Improved timer management to prevent resource leaks

Dispose Pattern Improvements:
- Added disposed state checks in all public methods across all classes
- Fixed ToggleSharing to handle disposed state correctly
- Ensured all BehaviorSubjects and Subjects are properly disposed
- Added null-conditional operators for safer disposal
- Implemented double-dispose protection in all IDisposable classes

WebSocket Connection Management:
- Fixed timer auto-reconnect behavior after manual disconnect
- Timer now pauses on disconnect and resumes on connect
- Added disposed checks in AutoReconnectCallback
- Improved reconnection logic with proper state handling

Test Coverage:
- Added 87 comprehensive unit tests (all passing)
- Created tests for ObservableExtensions (5 tests)
- Created tests for ClientInformation (3 tests)
- Created tests for ClientMessage serialization (17 tests)
- Created tests for ServerMessage deserialization (5 tests)
- Created tests for TeamsClientBase (8 tests)
- Created tests for TeamsClient functionality (24 tests)
- Created tests for WebSocketHandler dispose pattern (6 tests)
- Created tests for WebSocketHandler messaging (7 tests)
- Created tests for ClientWebSocketAdapter (8 tests)
- Fixed and enabled previously skipped reconnection test
- All tests use Moq for proper mocking of dependencies

Code Quality:
- Removed redundant comments
- Improved error handling consistency
- Enhanced thread safety with proper lock usage
- Better resource cleanup in all components

* Consolidate state management with immutable state object and enhance documentation

State Management Optimization:


--- a/Teams.ThirdPartyAppApi.Benchmarks/Teams.ThirdPartyAppApi.Benchmarks.csproj
+++ b/Teams.ThirdPartyAppApi.Benchmarks/Teams.ThirdPartyAppApi.Benchmarks.csproj
@@ -2,10 +2,14 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFrameworks>net10.0</TargetFrameworks>
+    <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="BenchmarkDotNet" Version="0.15.6" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\src\Teams.ThirdPartyAppApi.csproj" />
